<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.tim.locationreminder.view.OhTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_menu_scope" />

        <com.tim.locationreminder.view.OhEditText
            android:id="@+id/view_distance_seekbar_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:enabled="false"
            android:gravity="center_vertical"
            android:inputType="textNoSuggestions" />

        <com.tim.locationreminder.view.OhTextView
            android:id="@+id/view_distance_seekbar_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_meters" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/view_distance_seekbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:thumbOffset="0dp"/>

        <com.tim.locationreminder.view.OhTextView
            android:id="@+id/view_distance_seekbar_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sl_ios_btn_blue"
            android:gravity="center"
            android:text="@string/common_done" />
    </LinearLayout>

</merge>